feat: 拆分Agent模型节点运行语义