@@ -2,15 +2,24 @@ package online.yudream.base.application.platform.agent.workflow;
 
 import com.fasterxml.jackson.databind.ObjectMapper;
 import online.yudream.base.application.platform.agent.cmd.AgentRunCmd;
-import online.yudream.base.application.platform.agent.workflow.handler.AgentEndNodeHandler;
 import online.yudream.base.application.platform.agent.workflow.handler.AgentLlmNodeHandler;
-import online.yudream.base.application.platform.agent.workflow.handler.AgentStartNodeHandler;
+import online.yudream.base.application.platform.agent.workflow.support.AgentModelToolResolver;
+import online.yudream.base.application.platform.agent.workflow.support.AgentToolExecutor;
 import online.yudream.base.application.platform.agent.workflow.support.AgentWorkflowRunState;
 import online.yudream.base.application.platform.agent.workflow.support.AgentWorkflowValueResolver;
+import online.yudream.base.domain.common.exception.BizException;
 import online.yudream.base.domain.platform.agent.aggregate.AgentApplication;
+import online.yudream.base.domain.platform.agent.repo.AgentToolRepo;
+import online.yudream.base.domain.platform.ai.enumerate.AiToolMode;
+import online.yudream.base.domain.platform.ai.service.AiAgentTool;
+import online.yudream.base.domain.platform.ai.service.AiAgentToolExecutionScope;
 import online.yudream.base.domain.platform.ai.service.AiGenerationGateway;
+import online.yudream.base.domain.platform.ai.valobj.AiAgentToolCall;
+import online.yudream.base.domain.platform.ai.valobj.AiAgentToolDescriptor;
+import online.yudream.base.domain.platform.ai.valobj.AiAgentToolResult;
 import online.yudream.base.domain.platform.ai.valobj.AiGenerationRequest;
 import online.yudream.base.domain.platform.ai.valobj.AiGenerationResult;
+import online.yudream.base.domain.platform.integration.service.RuntimeExecutor;
 import org.junit.jupiter.api.Test;
 
 import java.util.ArrayList;
@@ -18,169 +27,179 @@ import java.util.List;
 import java.util.Map;
 
 import static org.assertj.core.api.Assertions.assertThat;
+import static org.assertj.core.api.Assertions.assertThatThrownBy;
+import static org.mockito.Mockito.mock;
 
 class AgentLlmNodeHandlerTest {
 
     @Test
-    void shouldExecuteUnderstandThenLlmWithNodeSpecificModelsAndVision() {
-        ObjectMapper objectMapper = new ObjectMapper();
-        AgentWorkflowValueResolver values = new AgentWorkflowValueResolver(objectMapper);
-        CapturingGateway gateway = new CapturingGateway();
-        AgentApplication application = AgentApplication.builder()
-                .name("客服 Agent")
-                .code("support")
-                .systemPrompt("你是客服")
-                .toolCodes(List.of("web.fetch"))
-                .build();
-        AgentRunCmd cmd = new AgentRunCmd();
-        cmd.setInput("如何退款");
-        cmd.setImageDataUrl("data:image/png;base64,abc");
-        List<String> deltas = new ArrayList<>();
-        AgentWorkflowRunState state = new AgentWorkflowRunState(
-                application,
-                cmd,
-                Map.of("providers", "[]"),
-                java.util.Set.of("web.fetch"),
-                deltas::add,
-                ignored -> { }
-        );
-        AgentWorkflowExecutor executor = new AgentWorkflowExecutor(
-                new AgentWorkflowGraphParser(objectMapper),
-                List.of(
-                        new AgentStartNodeHandler(values),
-                        new AgentLlmNodeHandler("understand", values, objectMapper, gateway, state),
-                        new AgentLlmNodeHandler("llm", values, objectMapper, gateway, state),
-                        new AgentEndNodeHandler(values)
-                )
-        );
+    void llmShouldStreamTextAndExposeOnlyItsOwnTools() {
+        CapturingGateway gateway = new CapturingGateway("answer", List.of());
+        AgentWorkflowRunState state = state(gateway, List.of(tool("web.fetch"), tool("cms.patch")));
 
-        AgentWorkflowExecution execution = executor.execute("""
-                {"nodes":[
-                  {"id":"start","data":{"kind":"start","outputVariable":"query"}},
-                  {"id":"understand","data":{"kind":"understand","prompt":"提取 intent","inputVariable":"query","outputVariable":"intent","providerCode":"p1","modelCode":"m1"}},
-                  {"id":"llm","data":{"kind":"llm","prompt":"回答用户","inputVariable":"intent","outputVariable":"answer","providerCode":"p2","modelCode":"m2","vision":true}},
-                  {"id":"end","data":{"kind":"end","inputVariable":"answer"}}
-                ],"edges":[
-                  {"source":"start","target":"understand"},
-                  {"source":"understand","target":"llm"},
-                  {"source":"llm","target":"end"}
-                ]}
-                """, cmd.getInput());
+        Object result = execute("llm", """
+                {"id":"model","data":{"kind":"llm","providerCode":"p","modelCode":"m",
+                "toolCodes":["web.fetch"],"toolMode":"AUTO"}}
+                """, state, gateway);
 
-        assertThat(gateway.requests).hasSize(2);
-        assertThat(gateway.requests.get(0).providerCode()).isEqualTo("p1");
-        assertThat(gateway.requests.get(0).modelCode()).isEqualTo("m1");
-        assertThat(gateway.requests.get(0).imageDataUrl()).isNull();
-        assertThat(gateway.requests.get(1).providerCode()).isEqualTo("p2");
-        assertThat(gateway.requests.get(1).modelCode()).isEqualTo("m2");
-        assertThat(gateway.requests.get(1).imageDataUrl()).isEqualTo(cmd.getImageDataUrl());
-        assertThat(gateway.requests.get(1).userPrompt()).contains("refund");
-        assertThat(gateway.requests.get(1).toolCallingEnabled()).isTrue();
-        assertThat(deltas).containsExactly("最终回答");
-        assertThat(execution.context().nodeOutput("end")).isEqualTo("最终回答");
+        assertThat(result).isEqualTo("answer");
+        assertThat(gateway.requests.getFirst().toolMode()).isEqualTo(AiToolMode.AUTO);
+        assertThat(gateway.scopedToolNames).containsExactly(List.of("web.fetch"));
     }
 
     @Test
-    void shouldAllowPluginRuntimeToOverrideModelAndEnablePluginToolCalling() {
-        ObjectMapper objectMapper = new ObjectMapper();
-        AgentWorkflowValueResolver values = new AgentWorkflowValueResolver(objectMapper);
-        CapturingGateway gateway = new CapturingGateway();
-        AgentApplication application = AgentApplication.builder()
-                .name("插件 Agent")
-                .code("plugin-agent")
-                .toolCodes(List.of())
-                .build();
-        AgentRunCmd cmd = new AgentRunCmd();
-        cmd.setInput("hello");
-        cmd.setProviderCode("runtime-provider");
-        cmd.setModelCode("runtime-model");
-        cmd.setRuntimeToolCallingEnabled(true);
-        AgentWorkflowRunState state = new AgentWorkflowRunState(
-                application, cmd, Map.of(), java.util.Set.of(), ignored -> { }, ignored -> { }
-        );
-        AgentWorkflowExecutor executor = new AgentWorkflowExecutor(
-                new AgentWorkflowGraphParser(objectMapper),
-                List.of(
-                        new AgentStartNodeHandler(values),
-                        new AgentLlmNodeHandler("llm", values, objectMapper, gateway, state),
-                        new AgentEndNodeHandler(values)
-                )
-        );
+    void extractShouldRequireJsonAndConfiguredRequiredFields() {
+        CapturingGateway gateway = new CapturingGateway("{\"title\":\"Agent\"}", List.of());
+        AgentWorkflowRunState state = state(gateway, List.of());
 
-        executor.execute("""
-                {"nodes":[
-                  {"id":"start","data":{"kind":"start","outputVariable":"query"}},
-                  {"id":"llm","data":{"kind":"llm","inputVariable":"query","outputVariable":"answer","providerCode":"__default__","modelCode":"__default__","allowModelOverride":true}},
-                  {"id":"end","data":{"kind":"end","inputVariable":"answer"}}
-                ],"edges":[
-                  {"source":"start","target":"llm"},{"source":"llm","target":"end"}
-                ]}
-                """, cmd.getInput());
+        Object output = execute("extract", """
+                {"id":"extract","data":{"kind":"extract","providerCode":"p","modelCode":"m",
+                "outputSchema":{"type":"object","required":["title"]}}}
+                """, state, gateway);
 
-        AiGenerationRequest request = gateway.requests.getFirst();
-        assertThat(request.providerCode()).isEqualTo("runtime-provider");
-        assertThat(request.modelCode()).isEqualTo("runtime-model");
-        assertThat(request.toolCallingEnabled()).isTrue();
+        assertThat(output).isEqualTo(Map.of("title", "Agent"));
+
+        CapturingGateway missing = new CapturingGateway("{\"other\":true}", List.of());
+        assertThatThrownBy(() -> execute("extract", """
+                {"id":"extract","data":{"kind":"extract","providerCode":"p","modelCode":"m",
+                "outputSchema":{"type":"object","required":["title"]}}}
+                """, state(missing, List.of()), missing))
+                .isInstanceOf(BizException.class)
+                .hasMessageContaining("title");
     }
 
     @Test
-    void shouldContinueWithRawPlanWhenUnderstandJsonIsInvalidAndStrictModeIsDisabled() {
-        ObjectMapper objectMapper = new ObjectMapper();
-        AgentWorkflowValueResolver values = new AgentWorkflowValueResolver(objectMapper);
-        AiGenerationGateway gateway = new AiGenerationGateway() {
-            @Override
-            public AiGenerationResult generate(AiGenerationRequest request) {
-                return new AiGenerationResult(null, "需求明确，直接构建首页", null, null, null, null, null, List.of(), List.of());
+    void classifyShouldOnlyReturnOneConfiguredClass() {
+        CapturingGateway gateway = new CapturingGateway("refund", List.of());
+        assertThat(execute("classify", """
+                {"id":"classify","data":{"kind":"classify","providerCode":"p","modelCode":"m",
+                "classes":["refund","consult"]}}
+                """, state(gateway, List.of()), gateway)).isEqualTo("refund");
+
+        CapturingGateway invalid = new CapturingGateway("other", List.of());
+        assertThatThrownBy(() -> execute("classify", """
+                {"id":"classify","data":{"kind":"classify","providerCode":"p","modelCode":"m",
+                "classes":["refund","consult"]}}
+                """, state(invalid, List.of()), invalid))
+                .isInstanceOf(BizException.class)
+                .hasMessageContaining("分类");
+    }
+
+    @Test
+    void visionShouldRequireImageAndPassItOnlyToVisionNode() {
+        CapturingGateway gateway = new CapturingGateway("described", List.of());
+        AgentWorkflowRunState state = state(gateway, List.of());
+        state.command().setImageDataUrl("data:image/png;base64,image");
+
+        execute("vision", """
+                {"id":"vision","data":{"kind":"vision","providerCode":"p","modelCode":"vision-model"}}
+                """, state, gateway);
+
+        assertThat(gateway.requests.getFirst().imageDataUrl()).isEqualTo("data:image/png;base64,image");
+
+        CapturingGateway noImage = new CapturingGateway("unused", List.of());
+        assertThatThrownBy(() -> execute("vision", """
+                {"id":"vision","data":{"kind":"vision","providerCode":"p","modelCode":"vision-model"}}
+                """, state(noImage, List.of()), noImage))
+                .isInstanceOf(BizException.class)
+                .hasMessageContaining("图片");
+    }
+
+    @Test
+    void requiredToolModeShouldFailWhenGenerationHasNoToolResult() {
+        CapturingGateway gateway = new CapturingGateway("answer", List.of());
+        assertThatThrownBy(() -> execute("llm", """
+                {"id":"llm","data":{"kind":"llm","providerCode":"p","modelCode":"m",
+                "toolCodes":["web.fetch"],"toolMode":"REQUIRED"}}
+                """, state(gateway, List.of(tool("web.fetch"))), gateway))
+                .isInstanceOf(BizException.class)
+                .hasMessageContaining("必须调用工具");
+    }
+
+    @Test
+    void differentModelNodesMustNotLeakToolsAndLegacyUnderstandKeepsTolerantJson() {
+        CapturingGateway gateway = new CapturingGateway("not json", List.of());
+        AgentWorkflowRunState state = state(gateway, List.of(tool("web.fetch"), tool("cms.patch")));
+
+        execute("llm", """
+                {"id":"first","data":{"kind":"llm","providerCode":"p","modelCode":"m",
+                "toolCodes":["web.fetch"]}}
+                """, state, gateway);
+        execute("llm", """
+                {"id":"second","data":{"kind":"llm","providerCode":"p","modelCode":"m",
+                "toolCodes":["cms.patch"]}}
+                """, state, gateway);
+        Object understand = execute("understand", """
+                {"id":"understand","data":{"kind":"understand","providerCode":"p","modelCode":"m",
+                "strictJson":false}}
+                """, state, gateway);
+
+        assertThat(gateway.scopedToolNames).containsExactly(List.of("web.fetch"), List.of("cms.patch"), List.of());
+        assertThat(understand).isEqualTo(Map.of("raw", "not json"));
+    }
+
+    private Object execute(String kind, String nodeJson, AgentWorkflowRunState state, AiGenerationGateway gateway) {
+        ObjectMapper mapper = new ObjectMapper();
+        AgentWorkflowValueResolver values = new AgentWorkflowValueResolver(mapper);
+        AgentWorkflowNode node;
+        try {
+            var raw = mapper.readTree(nodeJson);
+            node = new AgentWorkflowNode(raw.path("id").asText(), kind, kind, raw.path("data"));
+        } catch (Exception exception) {
+            throw new AssertionError(exception);
+        }
+        return new AgentLlmNodeHandler(kind, values, mapper, gateway, state).execute(node, new AgentWorkflowContext("input"))
+                .output();
+    }
+
+    private AgentWorkflowRunState state(AiGenerationGateway gateway, List<AiAgentTool> tools) {
+        AgentApplication application = AgentApplication.builder().name("Agent").code("agent")
+                .toolCodes(tools.stream().map(item -> item.descriptor().name()).toList()).build();
+        AgentRunCmd command = new AgentRunCmd();
+        command.setInput("input");
+        command.setPermissionContextExplicit(true);
+        AgentToolExecutor executor = new AgentToolExecutor(new ObjectMapper(), mock(RuntimeExecutor.class),
+                mock(AgentToolRepo.class), tools, permission -> true);
+        return new AgentWorkflowRunState(application, command, Map.of(), java.util.Set.of(), ignored -> { }, ignored -> { },
+                new AgentModelToolResolver(executor));
+    }
+
+    private AiAgentTool tool(String name) {
+        return new AiAgentTool() {
+            @Override public AiAgentToolDescriptor descriptor() {
+                return new AiAgentToolDescriptor(name, name, "", "", "", "", "", Map.of());
+            }
+            @Override public AiAgentToolResult execute(AiAgentToolCall call) {
+                return new AiAgentToolResult(name, name, "", "completed", Map.of());
             }
         };
-        AgentApplication application = AgentApplication.builder().name("CMS Agent").code("cms").build();
-        AgentRunCmd cmd = new AgentRunCmd();
-        cmd.setInput("构建一个工作室首页");
-        AgentWorkflowRunState state = new AgentWorkflowRunState(
-                application, cmd, Map.of(), java.util.Set.of(), ignored -> { }, ignored -> { }
-        );
-        AgentWorkflowExecutor executor = new AgentWorkflowExecutor(
-                new AgentWorkflowGraphParser(objectMapper),
-                List.of(
-                        new AgentStartNodeHandler(values),
-                        new AgentLlmNodeHandler("understand", values, objectMapper, gateway, state),
-                        new AgentEndNodeHandler(values)
-                )
-        );
-
-        AgentWorkflowExecution execution = executor.execute("""
-                {"nodes":[
-                  {"id":"start","data":{"kind":"start","outputVariable":"query"}},
-                  {"id":"plan","data":{"kind":"understand","inputVariable":"query","outputVariable":"plan","providerCode":"p1","modelCode":"m1","strictJson":false}},
-                  {"id":"end","data":{"kind":"end","inputVariable":"plan"}}
-                ],"edges":[
-                  {"source":"start","target":"plan"},{"source":"plan","target":"end"}
-                ]}
-                """, cmd.getInput());
-
-        assertThat(execution.context().nodeOutput("end"))
-                .isEqualTo(Map.of("raw", "需求明确，直接构建首页"));
     }
 
     private static final class CapturingGateway implements AiGenerationGateway {
+        private final String summary;
+        private final List<AiAgentToolResult> toolResults;
         private final List<AiGenerationRequest> requests = new ArrayList<>();
+        private final List<List<String>> scopedToolNames = new ArrayList<>();
 
-        @Override
-        public AiGenerationResult generate(AiGenerationRequest request) {
-            requests.add(request);
-            String summary = "m1".equals(request.modelCode()) ? "{\"intent\":\"refund\"}" : "最终回答";
-            return new AiGenerationResult(null, summary, null, null, null, null, null, List.of(), List.of());
+        private CapturingGateway(String summary, List<AiAgentToolResult> toolResults) {
+            this.summary = summary;
+            this.toolResults = toolResults;
         }
 
-        @Override
-        public AiGenerationResult generateStream(
-                AiGenerationRequest request,
-                java.util.function.Consumer<String> onDelta,
-                java.util.function.Consumer<online.yudream.base.domain.platform.ai.valobj.AiAgentToolResult> onTool,
-                java.util.function.Consumer<online.yudream.base.domain.platform.ai.valobj.AiGenerationProgress> onProgress
-        ) {
+        @Override public AiGenerationResult generate(AiGenerationRequest request) {
+            requests.add(request);
+            scopedToolNames.add(AiAgentToolExecutionScope.currentTools().stream()
+                    .map(tool -> tool.descriptor().name()).toList());
+            return new AiGenerationResult(null, summary, null, null, null, null, null, List.of(), toolResults);
+        }
+
+        @Override public AiGenerationResult generateStream(AiGenerationRequest request,
+                                                           java.util.function.Consumer<String> onDelta,
+                                                           java.util.function.Consumer<AiAgentToolResult> onTool,
+                                                           java.util.function.Consumer<online.yudream.base.domain.platform.ai.valobj.AiGenerationProgress> onProgress) {
             AiGenerationResult result = generate(request);
-            onDelta.accept(result.summary());
+            onDelta.accept(summary);
+            toolResults.forEach(onTool);
             return result;
         }
     }
